--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -26,15 +26,21 @@ android {
             outputFileName = fileName
         }
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'org.web3j:core:3.3.1-android'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.8'
-
 }
 
 repositories {
