--- a/behavior/build.gradle
+++ b/behavior/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -7,7 +8,7 @@ android {
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
         versionCode 1
-        versionName "0.0.5"
+        versionName "0.0.8"
 
         buildConfigField 'String', 'ACTION_RPC_URL', "\"http://test.ttcnet.io/\""
         buildConfigField 'String', 'TOKEN_RPC_URL', "\"http://test.ttcnet.io/\""
@@ -20,12 +21,13 @@ android {
     }
 
     //自定义aar的名称
-    android.libraryVariants.all { variant ->
+    libraryVariants.all { variant ->
         variant.outputs.all {
             def fileName = "ttc_sdk_${defaultConfig.versionName}.aar"
             outputFileName = fileName
         }
     }
+
     repositories {
         flatDir {
             dirs 'libs'
@@ -35,13 +37,21 @@ android {
 }
 
 dependencies {
-    compile files("libs/protobuf-javanano-3.0.0-alpha-5.jar")
+//    compile files("libs/protobuf-javanano-3.0.0-alpha-5.jar")
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'org.web3j:core:3.3.1-android'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.8'
-//    implementation project(':biz')
-    implementation(name:'ttc_sdk_biz_0.0.5',ext:'aar')
+
+    implementation project(':biz')
+
+//    implementation(name:'ttc_sdk_biz_0.0.6',ext:'aar')
+
+    implementation 'com.google.android.gms:play-services-ads:17.1.2'
+
 }
 
 repositories {
