--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "io.ttcnet.ttc_sdk_inner"
+        applicationId "ttc.behavior.demo"
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
         versionCode 1
@@ -17,6 +15,10 @@ android {
     }
 
     signingConfigs {
+        debug{
+
+        }
+        
         release {
             keyAlias "keyAlias"
             keyPassword "123456"
@@ -26,18 +28,32 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            manifestPlaceholders = [ADMOB_APP_ID: "ca-app-pub-3940256099942544~3347511713"]
+            buildConfigField("String", "bannerUnitId", "\"ca-app-pub-3940256099942544/6300978111\"")
+            buildConfigField("String", "interstitialUnitId", "\"ca-app-pub-3940256099942544/8691691433\"")
+            buildConfigField("String", "rewardUnitId", "\"ca-app-pub-3940256099942544/5224354917\"")
+        }
+
         release {
-            minifyEnabled false
+            minifyEnabled true
+            manifestPlaceholders = [ADMOB_APP_ID: "ca-app-pub-3081086010287406~9085005576"]
+            buildConfigField("String", "bannerUnitId", "\"ca-app-pub-3081086010287406/1197232103\"")
+            buildConfigField("String", "interstitialUnitId", "\"ca-app-pub-3081086010287406/6837367756\"")
+            buildConfigField("String", "rewardUnitId", "\"ca-app-pub-3081086010287406/8541233601\"")
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            versionNameSuffix "ft4"
+
+            applicationVariants.all { variant ->
+                variant.outputs.all { output ->
+                    def fileName = "BehaviorDemo${defaultConfig.versionName}.apk"
+                    outputFileName = fileName
+                }
+            }
         }
 
-
-        ft.initWith(release)
-        ft{
-            versionNameSuffix "ft"
-            matchingFallbacks = ["ft", "release", "debug"]
-        }
     }
 
     repositories {
@@ -48,7 +64,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -56,13 +71,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.android:flexbox:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-//    implementation (project(":behavior")){
-//        transitive = false
-//    }
-//
-//    implementation project(":pay")
+//    implementation project(':behavior')
 
-    implementation(name:'ttc_sdk_biz_0.0.5', ext:'aar')
-    implementation(name:'ttc_sdk_0.0.5', ext:'aar')
+
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
+    implementation 'com.google.android.gms:play-services-ads:17.1.2'
+    implementation(name:'ttc_sdk_biz_0.0.8', ext:'aar')
+    implementation(name:'ttc_sdk_0.0.8', ext:'aar')
 }
