--- a/payDemo/build.gradle
+++ b/payDemo/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -37,11 +35,11 @@ android {
             }
         }
 
-        ft.initWith(release)
-        ft {
-            matchingFallbacks = ["ft", "release", "debug"]
-            versionNameSuffix "ft4"
-        }
+//        ft.initWith(release)
+//        ft {
+//            matchingFallbacks = ["ft", "release", "debug"]
+//            versionNameSuffix "ft4"
+//        }
     }
 
     repositories {
@@ -53,7 +51,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -70,5 +67,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
-    implementation(name: 'ttc_pay_0.0.18', ext: 'aar')
+//    implementation(name: 'ttc_pay_0.0.18', ext: 'aar')
+    implementation project(":pay")
 }
