--- a/behivorDemo/src/main/AndroidManifest.xml
+++ b/behivorDemo/src/main/AndroidManifest.xml
@@ -26,15 +26,16 @@
                 android:name=".AdsActivity"
                 android:screenOrientation="portrait"/>
 
-        <meta-data
-                android:name="com.google.android.gms.ads.APPLICATION_ID"
-                android:value="${ADMOB_APP_ID}"/>
+
         <meta-data
                 android:name="TTC_APP_ID"
                 android:value="SDKTest"/>
         <meta-data
                 android:name="TTC_APP_SECRET_KEY"
                 android:value="9d1990b8fc9cf1328d88af73b8f89e4d"/>
+        <meta-data
+                android:name="com.google.android.gms.ads.APPLICATION_ID"
+                android:value="ca-app-pub-3081086010287406~9085005576"/>
 
         <activity android:name=".BehaviorActivity"/>
         <activity android:name=".BannerActivity">
