--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -15,10 +15,6 @@ android {
     }
 
     signingConfigs {
-        debug{
-
-        }
-
         release {
             keyAlias "keyAlias"
             keyPassword "123456"
@@ -73,12 +69,15 @@ dependencies {
     implementation 'com.google.android:flexbox:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    //project
 //    implementation project(':behavior')
 
-
+    //aar
     implementation 'org.web3j:core:3.3.1-android'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
     implementation 'com.google.android.gms:play-services-ads:17.1.2'
-    implementation(name:'ttc_sdk_biz_0.0.8', ext:'aar')
-    implementation(name:'ttc_sdk_0.0.8', ext:'aar')
+    implementation(name: 'ttc_sdk_biz_0.0.18', ext: 'aar')
+    implementation(name: 'ttc_sdk_0.0.18', ext: 'aar')
+
+
 }
