--- a/payDemo/build.gradle
+++ b/payDemo/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "io.ttcnet.ttc_pay_demo_officer"
+        applicationId "ttc.pay.demo"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
@@ -35,11 +35,6 @@ android {
             }
         }
 
-//        ft.initWith(release)
-//        ft {
-//            matchingFallbacks = ["ft", "release", "debug"]
-//            versionNameSuffix "ft4"
-//        }
     }
 
     repositories {
@@ -67,6 +62,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
-//    implementation(name: 'ttc_pay_0.0.18', ext: 'aar')
-    implementation project(":pay")
+    implementation(name: 'ttc_pay_0.0.4', ext: 'aar')
+//    implementation project(":pay")
 }
