--- a/payDemo/build.gradle
+++ b/payDemo/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.19"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -35,6 +35,11 @@ android {
             }
         }
 
+//        ft.initWith(release)
+//        ft {
+//            matchingFallbacks = ["ft", "release", "debug"]
+//            versionNameSuffix "ft4"
+//        }
     }
 
     repositories {
@@ -62,6 +67,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
-    implementation(name: 'ttc_pay_0.0.4', ext: 'aar')
+    implementation(name: 'ttc_pay_0.0.19', ext: 'aar')
 //    implementation project(":pay")
 }
