--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -69,9 +69,10 @@ dependencies {
     implementation 'com.google.android:flexbox:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    //project
 //    implementation project(':behavior')
 
-
+    //aar
     implementation 'org.web3j:core:3.3.1-android'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
     implementation 'com.google.android.gms:play-services-ads:17.1.2'
