--- a/behivorDemo/src/main/AndroidManifest.xml
+++ b/behivorDemo/src/main/AndroidManifest.xml
@@ -31,10 +31,10 @@
                 android:targetActivity="com.ttc.behavior.ui.BindActivity">
 
             <intent-filter>
-                <action android:name="com.ttc.wallet.BINDACTION" />
+                <action android:name="com.ttc.wallet.BINDACTION"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data
-                        android:scheme="ttc.behavior.demo" />
+                        android:scheme="ttc.behavior.demo"/>
             </intent-filter>
 
         </activity-alias>
@@ -45,9 +45,18 @@
         <meta-data
                 android:name="TTC_APP_SECRET_KEY"
                 android:value="9d1990b8fc9cf1328d88af73b8f89e4d"/>
+
+        <!--广告需要添加-->
+        <!--add it if advertise-->
+        <!--&lt;!&ndash;google提供的开发id&ndash;&gt;-->
+        <!--<meta-data-->
+                <!--android:name="com.google.android.gms.ads.APPLICATION_ID"-->
+                <!--android:value="ca-app-pub-3081086010287406~9085005576"/>-->
+
+        <!--线上的id-->
         <meta-data
                 android:name="com.google.android.gms.ads.APPLICATION_ID"
-                android:value="ca-app-pub-3081086010287406~9085005576"/>
+                android:value="ca-app-pub-3940256099942544~3347511713"/>
 
         <activity android:name=".BehaviorActivity"/>
         <activity android:name=".BannerActivity">
