--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -15,6 +15,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
+
     signingConfigs {
         release {
             keyAlias "keyAlias"
@@ -27,10 +33,7 @@ android {
     buildTypes {
 
         debug {
-            manifestPlaceholders = [ADMOB_APP_ID: "ca-app-pub-3940256099942544~3347511713"]
-            buildConfigField("String", "bannerUnitId", "\"ca-app-pub-3940256099942544/6300978111\"")
-            buildConfigField("String", "interstitialUnitId", "\"ca-app-pub-3940256099942544/8691691433\"")
-            buildConfigField("String", "rewardUnitId", "\"ca-app-pub-3940256099942544/5224354917\"")
+            signingConfig signingConfigs.release
 
             applicationVariants.all { variant ->
                 variant.outputs.all { output ->
@@ -42,10 +45,7 @@ android {
 
         release {
             minifyEnabled true
-            manifestPlaceholders = [ADMOB_APP_ID: "ca-app-pub-3081086010287406~9085005576"]
-            buildConfigField("String", "bannerUnitId", "\"ca-app-pub-3081086010287406/1197232103\"")
-            buildConfigField("String", "interstitialUnitId", "\"ca-app-pub-3081086010287406/6837367756\"")
-            buildConfigField("String", "rewardUnitId", "\"ca-app-pub-3081086010287406/8541233601\"")
+
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
@@ -80,9 +80,9 @@ dependencies {
 //    implementation project(':behavior')
 
     //aar
-    implementation 'org.web3j:core:3.3.1-android'
+    implementation 'org.web3j:core:4.2.0-android'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
-    implementation 'com.google.android.gms:play-services-ads:17.1.3'
-    implementation(name:'ttc_sdk_biz_0.1.0', ext:'aar')
-    implementation(name:'ttc_sdk_0.1.0', ext:'aar')
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    implementation(name: 'ttc_sdk_biz_0.1.1', ext: 'aar')
+    implementation(name: 'ttc_sdk_0.1.1', ext: 'aar')
 }
