--- a/behivorDemo/src/main/AndroidManifest.xml
+++ b/behivorDemo/src/main/AndroidManifest.xml
@@ -11,9 +11,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
+        <receiver
+                android:name=".MyReceiver"
+                android:enabled="true"
+                android:exported="true">
+        </receiver>
 
-        <activity android:name=".activity.RegisterActivity"
-                  android:windowSoftInputMode="stateAlwaysVisible">
+        <activity
+                android:name=".activity.RegisterActivity"
+                android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
@@ -21,43 +27,51 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
                 android:name=".activity.AdsActivity"
                 android:screenOrientation="portrait"/>
 
         <activity-alias
-                android:name="bind"
+                android:name=".bind"
                 android:targetActivity="com.acn.behavior.ui.BindActivity">
-
             <intent-filter>
                 <action android:name="com.acn.wallet.BINDACTION"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data
-                        android:scheme="acn.behavior.demo"/>
-            </intent-filter>
 
+                <category android:name="android.intent.category.DEFAULT"/>
+
+                <data android:scheme="acn.behavior.demo"/>
+            </intent-filter>
         </activity-alias>
+
+        <receiver
+                android:name="com.acn.behavior.BindReceiver"
+                android:enabled="true"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="acn.bind.receiver"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </receiver>
 
         <meta-data
                 android:name="ACN_DAPP_ID"
                 android:value="SDKTest"/>
         <meta-data
                 android:name="ACN_DAPP_SECRET_KEY"
-                android:value="9d1990b8fc9cf1328d88af73b8f89e4d"/>
-
-        <!--广告需要添加-->
-        <!--add it if advertise-->
-        <!--google提供的开发id-->
+                android:value="9d1990b8fc9cf1328d88af73b8f89e4d"/> <!-- 广告需要添加 -->
+        <!-- add it if advertise -->
+        <!-- google提供的开发id -->
         <meta-data
                 android:name="com.google.android.gms.ads.APPLICATION_ID"
-                android:value="ca-app-pub-3081086010287406~9085005576"/>
-
-        <!--线上的id-->
-        <!--<meta-data-->
-                <!--android:name="com.google.android.gms.ads.APPLICATION_ID"-->
-                <!--android:value="ca-app-pub-3940256099942544~3347511713"/>-->
-
+                android:value="ca-app-pub-3940256099942544~3347511713"/> <!-- 线上的id -->
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.gms.ads.APPLICATION_ID" -->
+        <!-- android:value="ca-app-pub-3081086010287406~9085005576"/> -->
+        <!-- alive -->
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.gms.ads.APPLICATION_ID" -->
+        <!-- android:value="ca-app-pub-3081086010287406~1303871795"/> -->
         <activity android:name=".activity.BehaviorActivity"/>
         <activity android:name=".activity.BannerActivity">
         </activity>
