--- a/behavior/build.gradle
+++ b/behavior/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -7,7 +8,7 @@ android {
     defaultConfig {
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
-        versionCode 1
+        versionCode 2
         versionName SDK_VERSION_NAME
     }
     buildTypes {
@@ -46,10 +47,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.8'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    implementation 'com.google.ads.mediation:facebook:5.4.0.0'
 
 //    implementation project(':biz')
 
-    implementation(name:'acn_sdk_biz_0.2.0',ext:'aar')
+    implementation(name:'acn_sdk_biz_0.2.1',ext:'aar')
 }
 
 repositories {
