--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -8,9 +8,8 @@ android {
         applicationId "acn.behavior.demo"
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
-        versionCode 1
+        versionCode 2
         versionName SDK_VERSION_NAME
-        versionNameSuffix "ft5"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -37,7 +36,7 @@ android {
 
             applicationVariants.all { variant ->
                 variant.outputs.all { output ->
-                    def fileName = "BehaviorDemo${defaultConfig.versionName}_${defaultConfig.versionNameSuffix}.apk"
+                    def fileName = "BehaviorDemo${defaultConfig.versionName}.apk"
                     outputFileName = fileName
                 }
             }
@@ -51,7 +50,7 @@ android {
 
             applicationVariants.all { variant ->
                 variant.outputs.all { output ->
-                    def fileName = "BehaviorDemo${defaultConfig.versionName}_${defaultConfig.versionNameSuffix}.apk"
+                    def fileName = "BehaviorDemo${defaultConfig.versionName}.apk"
                     outputFileName = fileName
                 }
             }
@@ -83,6 +82,6 @@ dependencies {
     implementation 'org.web3j:core:4.2.0-android'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
-    implementation(name: 'acn_sdk_biz_0.2.0', ext: 'aar')
-    implementation(name: 'acn_sdk_0.2.0', ext: 'aar')
+    implementation(name: 'acn_sdk_biz_0.2.1', ext: 'aar')
+    implementation(name: 'acn_sdk_0.2.1', ext: 'aar')
 }
