--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -83,5 +83,5 @@ dependencies {
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
     implementation(name: 'acn_sdk_biz_0.2.1', ext: 'aar')
-    implementation(name: 'acn_sdk_0.2.1', ext: 'aar')
+    implementation(name: 'acn_sdk_0.2.2ft1', ext: 'aar')
 }
