--- a/behivorDemo/build.gradle
+++ b/behivorDemo/build.gradle
@@ -82,6 +82,6 @@ dependencies {
     implementation 'org.web3j:core:4.2.0-android'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
-    implementation(name: 'acn_sdk_biz_0.2.2ft5', ext: 'aar')
-    implementation(name: 'acn_sdk_0.2.2ft5', ext: 'aar')
+    implementation(name: 'acn_sdk_biz_0.2.2', ext: 'aar')
+    implementation(name: 'acn_sdk_0.2.2', ext: 'aar')
 }
