--- a/behavior/build.gradle
+++ b/behavior/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
 //    implementation project(':biz')
 
-    implementation(name:'acn_sdk_biz_0.2.2ft5',ext:'aar')
+    implementation(name:'acn_sdk_biz_0.2.2',ext:'aar')
 }
 
 repositories {
