--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ kotlin.code.style=official
 MIN_SDK_VERSION = 17
 TARGET_SDK_VERSION = 28
 
-SDK_VERSION_NAME = 0.2.2ft5
+SDK_VERSION_NAME = 0.2.2.2
 PAY_VERSION_NAME = 0.1.0
