--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,12 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# Kotlin code style for this project: "official" or "obsolete":
+# Kotlin code style for this project: "official" or "obsolete"
 kotlin.code.style=official
 
 
 MIN_SDK_VERSION = 17
 TARGET_SDK_VERSION = 28
 
-SDK_VERSION_NAME = 0.2.2.7
+SDK_VERSION_NAME = 0.2.2.9
 PAY_VERSION_NAME = 0.1.0
