--- a/behavior/build.gradle
+++ b/behavior/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
-        versionCode 2
+        versionCode SDK_VERSION_CODE as int
         versionName SDK_VERSION_NAME
     }
     buildTypes {
