--- a/behivorDemo/src/main/AndroidManifest.xml
+++ b/behivorDemo/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 android:name=".bind"
                 android:targetActivity="com.acn.behavior.ui.BindActivity">
             <intent-filter>
-                <action android:name="com.acn.wallet.BINDACTION"/>
+                <action android:name="com.ttc.wallet.BINDACTION"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
 
