--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,6 @@ kotlin.code.style=official
 MIN_SDK_VERSION = 17
 TARGET_SDK_VERSION = 28
 
-SDK_VERSION_NAME = 0.2.2.9
+SDK_VERSION_CODE = 2
+SDK_VERSION_NAME = 0.2.2.12
 PAY_VERSION_NAME = 0.1.0
