--- a/behivorDemo/src/main/AndroidManifest.xml
+++ b/behivorDemo/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <!--tata-->
         <!--<meta-data-->
                 <!--android:name="ACN_DAPP_ID"-->
-                <!--android:value="tataUFO"/>-->
+                <!--android:value="tataufo"/>-->
         <!--<meta-data-->
                 <!--android:name="ACN_DAPP_SECRET_KEY"-->
                 <!--android:value="9d1990b8fc9cf1328d88af73b8f89e4d"/>-->
