--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ TARGET_SDK_VERSION = 28
 SDK_VERSION_CODE = 5
 SDK_VERSION_NAME = 0.2.3.26
 PAY_VERSION_NAME = 0.1.0
+android.useAndroidX=true
+android.enableJetifier=true
