--- a/payDemo/build.gradle
+++ b/payDemo/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
 
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
@@ -73,7 +74,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
-    implementation project(":pay")
+//    implementation project(":pay")
 
-//    implementation(name: 'ttc_pay_0.1.0', ext: 'aar')
+    implementation(name: 'ttc_pay_0.1.0', ext: 'aar')
 }
