当acn钱包版本过低，在error回调中返回；去掉了toast提示和自动打开acn下载网页

--- a/payDemo/build.gradle
+++ b/payDemo/build.gradle
@@ -76,5 +76,5 @@ dependencies {
 
 //    implementation project(":pay")
 
-    implementation(name: 'ttc_pay_0.2.0_4', ext: 'aar')
+    implementation(name: 'ttc_pay_0.2.0', ext: 'aar')
 }
