--- a/pay/build.gradle
+++ b/pay/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
-        versionCode 1
-        versionName "0.2.0_4"
+        versionCode 2
+        versionName "0.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,7 +38,7 @@ android {
 dependencies {
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     testImplementation 'junit:junit:4.12'
@@ -48,3 +48,6 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+
+//0.2.0(2)
