--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.5.30'
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -17,8 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
