--- a/behaviorDemo/build.gradle
+++ b/behaviorDemo/build.gradle
@@ -75,12 +75,12 @@ dependencies {
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     //project
-    implementation project(':behavior')
+//    implementation project(':behavior')
 
     //aar
-//    implementation 'org.web3j:core:4.2.0-android'
-//    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
-//    implementation 'com.google.android.gms:play-services-ads:17.2.0'
-//    implementation(name: 'acn_sdk_biz_0.2.4.3', ext: 'aar')
-//    implementation(name: 'acn_sdk_0.2.4.5', ext: 'aar')
+    implementation 'org.web3j:core:4.2.0-android'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-5'
+    implementation 'com.google.android.gms:play-services-ads:18.2.0'
+    implementation(name: 'acn_sdk_biz_0.2.4.3', ext: 'aar')
+    implementation(name: 'acn_sdk_0.2.4.6', ext: 'aar')
 }
